force-app/main/default/objects/Case/fields/Case_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_Base_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://ndcloud-dev-ed.my.salesforce.com/&quot; &amp; Id, &quot;&#39;&quot; &amp; CaseNumber &amp; &quot;&#39;&quot;,&quot;_blank&quot;)</formula>
    <label>Case Base URL</label>
    <type>Text</type>
</CustomField>