force-app/main/default/objects/Case/fields/SCMT__DeskActiveDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskActiveDate__c</fullName>
    <label>Desk Active Date</label>
    <type>DateTime</type>
</CustomField>