force-app/main/default/objects/Case/fields/SCMT__DeskAssignedGroup__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskAssignedGroup__c</fullName>
    <description>Desk.com allows a case to be associated to both a user and a group (Queue). Salesforce allows a case to be assigned to either a user or a queue, but not both at the same time. This field holds the group assigned to this case from Desk.com.</description>
    <label>Desk Assigned Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>