force-app/main/default/objects/Case/fields/SCMT__DeskChangedDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskChangedDate__c</fullName>
    <label>Desk Changed Date</label>
    <type>DateTime</type>
</CustomField>