force-app/main/default/objects/Case/fields/SCMT__DeskCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskCreatedAt__c</fullName>
    <description>This field is used to hold the &#39;created at&#39; timestamp from Desk.com to maintain audit history.</description>
    <label>Desk Created At</label>
    <type>DateTime</type>
</CustomField>