force-app/main/default/objects/Case/fields/SCMT__DeskExternalId__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskExternalId__c</fullName>
    <label>Desk External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>