force-app/main/default/objects/Case/fields/SCMT__DeskFirstOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskFirstOpenedDate__c</fullName>
    <label>Desk First Opened Date</label>
    <type>DateTime</type>
</CustomField>