force-app/main/default/objects/Case/fields/SCMT__DeskFirstResolvedDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskFirstResolvedDate__c</fullName>
    <label>Desk First Resolved Date</label>
    <type>DateTime</type>
</CustomField>