force-app/main/default/objects/Case/fields/SCMT__DeskId__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskId__c</fullName>
    <description>This custom field contains the Id of this record from Desk.com for historical purposes. This field should be read-only and phased out over time and removed.</description>
    <externalId>true</externalId>
    <label>Desk Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>