force-app/main/default/objects/Case/fields/SCMT__DeskLabels__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskLabels__c</fullName>
    <label>Desk Labels</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>