force-app/main/default/objects/Case/fields/SCMT__DeskOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskOpenedDate__c</fullName>
    <label>Desk Opened Date</label>
    <type>DateTime</type>
</CustomField>