force-app/main/default/objects/Case/fields/SCMT__DeskReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskReceivedDate__c</fullName>
    <label>Desk Received Date</label>
    <type>DateTime</type>
</CustomField>