force-app/main/default/objects/Case/fields/SCMT__DeskResolvedAt__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskResolvedAt__c</fullName>
    <label>Desk Resolved At</label>
    <type>DateTime</type>
</CustomField>