force-app/main/default/objects/Case/fields/SCMT__DeskThreadId__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskThreadId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field will hold the unique hash included in outgoing emails from Desk.com. When a customer responds to an email, this hash is used to find the existing case and associate the email message with it rather than creating a new case. This field should be read-only and phased out over time and removed.</description>
    <externalId>true</externalId>
    <label>Desk Thread Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>