force-app/main/default/objects/Case/fields/SCMT__DeskUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskUpdatedAt__c</fullName>
    <description>This field is used to hold the &#39;updated at&#39; timestamp from Desk.com to maintain audit history.</description>
    <label>Desk Updated At</label>
    <type>DateTime</type>
</CustomField>