force-app/main/default/objects/Case/fields/SCMT__Language__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>