force-app/main/default/objects/Case/recordTypes/SCMT__SCMT.recordType-meta.xml
<RecordType>
    <fullName>SCMT__SCMT</fullName>
    <active>true</active>
    <businessProcess>SCMT__SCMT</businessProcess>
    <label>Desk.com Migrated Cases</label>
</RecordType>