force-app/main/default/objects/Case/listViews/test_Case.listView-meta.xml
<ListView>
    <fullName>test_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>test</label>
    <queue>test</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>